# cnki-search-Description

./: .gitignore  LICENSE  README.md  SKILL.md  cnki_search_cli.py  pyproject.toml  run.bat  run.sh
.claude-plugin/: plugin.json
.claude-plugin/.claude-plugin/: plugin.json
cnki_search/: __init__.py  __main__.py
examples/: queries.json  thesis_queries.json
