[project]
name = "cnki-search"
version = "1.0.0"
description = "CNKI (中国知网) literature search with browser automation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "selenium>=4.0",
    "webdriver-manager>=4.0",
]

[project.scripts]
cnki-search = "cnki_search:main"
cnki-search-gui = "cnki_search:main_gui"

[project.urls]
Homepage = "https://github.com/Lesley0905/cnki-search"
Issues = "https://github.com/Lesley0905/cnki-search/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
